--- a/.github/workflows/publish_image.yaml
+++ b/.github/workflows/publish_image.yaml
@@ -5,7 +5,6 @@ on:
       - main
 env:
   REGISTRY: ghcr.io
-  XROAD_HOME: ${{ github.workspace }}
 jobs:
   Publish:
     name: Publish example-restapi image
@@ -21,11 +20,14 @@ jobs:
           registry: ${{ env.REGISTRY }}
           username: ${{ github.actor }}
           password: ${{ secrets.GITHUB_TOKEN }}
+      - name: Set up Docker Buildx
+        uses: docker/setup-buildx-action@v3
       - name: Build and push Docker image
         uses: docker/build-push-action@v6
         with:
-          context: ${{ github.workspace }}
+          platforms: linux/amd64,linux/arm64
           push: true
+          provenance: false
           tags: ghcr.io/nordic-institute/xrddev-example-restapi:latest
       - name: Clean old images
         uses: snok/container-retention-policy@v2
